[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/coffee-shop.png" type="Texture" id=1]
[ext_resource path="res://buildings/HotCoffeeShop/HotCoffeeShop.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.1269, 5.36596 )

[node name="HotCoffeeShop" type="Sprite"]
position = Vector2( -0.0883942, 0 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ItemSpawnLocations" type="Node" parent="."]

[node name="Node2D" type="Node2D" parent="ItemSpawnLocations"]
position = Vector2( 0, 12.5078 )

[node name="Node2D2" type="Node2D" parent="ItemSpawnLocations"]
position = Vector2( 12.1976, 12.3587 )

[node name="InteractZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractZone"]
position = Vector2( 6.82094, 18.4305 )
shape = SubResource( 1 )

[connection signal="body_entered" from="InteractZone" to="." method="_on_InteractZone_body_entered"]
[connection signal="body_exited" from="InteractZone" to="." method="_on_InteractZone_body_exited"]
